# QASMBuilder

./: pyproject.toml  test.py  trotter.qasm
src/qasmbuilder/: builder.py  tfim.py
