[tool.poetry]
name = "qasmbuilder"
version = "0.1.0"
description = "A small toolkit for building QASM scripts."
authors = ["lcauser <luke.causer@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
